# llama.cpp

app/: CMakeLists.txt  llama.cpp
common/: arg.cpp  common.cpp  common.h  download.cpp  download.h  hf-cache.cpp  hf-cache.h
ggml/src/ggml-vulkan/: ggml-vulkan.cpp
src/: llama-context.cpp  llama-model.cpp
tools/: CMakeLists.txt
tools/cmd/: CMakeLists.txt  README.md  cmd.cpp  cmd.h
tools/server/: server-models.cpp
